--- a/tagdict.yaml
+++ b/tagdict.yaml
@@ -5,3 +5,1269 @@ flg-52000000:
 flg-50000000:
 - Offline Game Mode
 - Single Player
+flg-50008000:
+- Offline Mode
+- Single Player
+- Shop
+flg-54000000:
+- Offline Mode
+- Single Player
+- Difficulty Specific
+flg-51008000:
+- Offline Mode
+- Single Player
+- Collectable
+- Shop
+flg-50800000:
+- Offline Mode
+- Single Player
+- Cumulative +
+flg-54004000:
+- Offline Mode
+- Single Player
+- Difficulty Specific
+- Buggy +
+flg-54100000:
+- Offline Mode
+- Single Player
+- Difficulty Specific
+- Time Consuming
+flg-20800100:
+- Online/Offline
+- Cooperative
+- Cumulative +
+flg-20000100:
+- Online/Offline
+- Cooperative
+flg-38000102:
+- Online/Offline
+- Single Player
+- Cooperative
+- Main Storyline
+- Story Completed
+flg-30800100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Cumulative +
+flg-38000100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Main Storyline
+flg-30000100:
+- Online/Offline
+- Single Player
+- Cooperative
+flg-30080100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Missable
+flg-32800100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Stackable
+- Cumulative +
+flg-31000100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Collectable
+flg-30000110:
+- Online/Offline
+- Single Player
+- Cooperative
+- Time/Date
+flg-30800080:
+- Online/Offline
+- Single Player
+- Versus
+- Cumulative +
+flg-20000080:
+- Online/Offline
+- Versus
+flg-20800080:
+- Online/Offline
+- Versus
+- Cumulative +
+flg-30000090:
+- Online/Offline
+- Single Player
+- Versus
+- Time/Date
+flg-36000080:
+- Online/Offline
+- Single Player
+- Versus
+- Difficulty Specific
+- Stackable
+flg-30000080:
+- Online/Offline
+- Single Player
+- Versus
+flg-30040080:
+- Online/Offline
+- Single Player
+- Versus
+- Buggy
+flg-58000000:
+- Offline Mode
+- Single Player
+- Main Storyline
+flg-58000002:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Story Completed
+flg-51000000:
+- Offline Mode
+- Single Player
+- Collectable
+flg-50088000:
+- Offline Mode
+- Single Player
+- Missable
+- Shop
+flg-50082000:
+- Offline Mode
+- Single Player
+- Missable
+- Level
+flg-50040000:
+- Offline Mode
+- Single Player
+- Buggy
+flg-56000000:
+- Offline Mode
+- Single Player
+- Difficulty Specific
+- Stackable
+flg-54000010:
+- Offline Mode
+- Single Player
+- Difficulty Specific
+- Time/Date
+flg-50000010:
+- Offline Mode
+- Single Player
+- Time/Date
+flg-34000080:
+- Online/Offline
+- Single Player
+- Versus
+- Difficulty Specific
+flg-31040080:
+- Online/Offline
+- Single Player
+- Versus
+- Collectable
+- Buggy
+flg-31000080:
+- Online/Offline
+- Single Player
+- Versus
+- Collectable
+flg-50002000:
+- Offline Mode
+- Single Player
+- Level
+flg-30008080:
+- Online/Offline
+- Single Player
+- Versus
+- Shop
+flg-3000A080:
+- Online/Offline
+- Single Player
+- Versus
+- Level
+- Shop
+flg-30800180:
+- Online/Offline
+- Single Player
+- Cooperative
+- Versus
+- Cumulative +
+flg-30000180:
+- Online/Offline
+- Single Player
+- Cooperative
+- Versus
+flg-80000080:
+- Online Mode
+- Versus
+flg-5A000002:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Story Completed
+- Stackable
+flg-5E000000:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Difficulty Specific
+- Stackable
+flg-5C000000:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Difficulty Specific
+flg-5000A000:
+- Offline Mode
+- Single Player
+- Level
+- Shop
+flg-90002180:
+- Online Mode
+- Single Player
+- Cooperative
+- Versus
+- Level
+flg-90000100:
+- Online Mode
+- Single Player
+- Cooperative
+flg-90000000:
+- Online Mode
+- Single Player
+flg-90000180:
+- Online Mode
+- Single Player
+- Cooperative
+- Versus
+flg-91000100:
+- Online Mode
+- Single Player
+- Cooperative
+- Collectable
+flg-91100100:
+- Online Mode
+- Single Player
+- Cooperative
+- Collectable
+- Time Consuming
+flg-91000000:
+- Online Mode
+- Single Player
+- Collectable
+flg-90002080:
+- Online Mode
+- Single Player
+- Versus
+- Level
+flg-90200080:
+- Online Mode
+- Single Player
+- Versus
+- Online Skill
+flg-90000080:
+- Online Mode
+- Single Player
+- Versus
+flg-91002100:
+- Online Mode
+- Single Player
+- Cooperative
+- Collectable
+- Level
+flg-98000000:
+- Online Mode
+- Single Player
+- Main Storyline
+flg-98002000:
+- Online Mode
+- Single Player
+- Main Storyline
+- Level
+flg-98002002:
+- Online Mode
+- Single Player
+- Main Storyline
+- Story Completed
+- Level
+flg-90400180:
+- Online Mode
+- Single Player
+- Cooperative
+- Versus
+- Viral
+flg-98000100:
+- Online Mode
+- Single Player
+- Cooperative
+- Main Storyline
+flg-94000000:
+- Online Mode
+- Single Player
+- Difficulty Specific
+flg-98002100:
+- Online Mode
+- Single Player
+- Cooperative
+- Main Storyline
+- Level
+flg-94000100:
+- Online Mode
+- Single Player
+- Cooperative
+- Difficulty Specific
+flg-80000088:
+- Online Mode
+- Versus
+- 12 Players Required
+flg-90040100:
+- Online Mode
+- Single Player
+- Cooperative
+- Buggy
+flg-90800100:
+- Online Mode
+- Single Player
+- Cooperative
+- Cumulative +
+flg-90100100:
+- Online Mode
+- Single Player
+- Cooperative
+- Time Consuming
+flg-96000100:
+- Online Mode
+- Single Player
+- Cooperative
+- Difficulty Specific
+- Stackable
+flg-92000100:
+- Online Mode
+- Single Player
+- Cooperative
+- Stackable
+flg-98000120:
+- Online Mode
+- Single Player
+- Cooperative
+- Main Storyline
+- External Content
+flg-94040100:
+- Online Mode
+- Single Player
+- Cooperative
+- Difficulty Specific
+- Buggy
+flg-90902100:
+- Online Mode
+- Single Player
+- Cooperative
+- Cumulative +
+- Level
+- Time Consuming
+flg-80000108:
+- Online Mode
+- Cooperative
+- 12 Players Required
+flg-90002100:
+- Online Mode
+- Single Player
+- Cooperative
+- Level
+flg-80000100:
+- Online Mode
+- Cooperative
+flg-90008100:
+- Online Mode
+- Single Player
+- Cooperative
+- Shop
+flg-28000100:
+- Online/Offline
+- Cooperative
+- Main Storyline
+flg-20008100:
+- Online/Offline
+- Cooperative
+- Shop
+flg-20808100:
+- Online/Offline
+- Cooperative
+- Cumulative +
+- Shop
+flg-200000C0:
+- Online/Offline
+- Versus
+- Host Only
+flg-21000100:
+- Online/Offline
+- Cooperative
+- Collectable
+flg-20800140:
+- Online/Offline
+- Cooperative
+- Host Only
+- Cumulative +
+flg-20000140:
+- Online/Offline
+- Cooperative
+- Host Only
+flg-2100C180:
+- Online/Offline
+- Cooperative
+- Versus
+- Collectable
+- Shop
+- Buggy +
+flg-80800100:
+- Online Mode
+- Cooperative
+- Cumulative +
+flg-50004000:
+- Offline Mode
+- Single Player
+- Buggy +
+flg-30000280:
+- Online/Offline
+- Single Player
+- Versus
+- Cumulative
+flg-31002080:
+- Online/Offline
+- Single Player
+- Versus
+- Collectable
+- Level
+flg-30000000:
+- Online/Offline
+- Single Player
+flg-30002080:
+- Online/Offline
+- Single Player
+- Versus
+- Level
+flg-31000000:
+- Online/Offline
+- Single Player
+- Collectable
+flg-31004000:
+- Online/Offline
+- Single Player
+- Collectable
+- Buggy +
+flg-31000500:
+- Online/Offline
+- Single Player
+- Cooperative
+- Collectable
+- Multiple Playthroughs Required
+flg-31000120:
+- Online/Offline
+- Single Player
+- Cooperative
+- Collectable
+- External Content
+flg-31002100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Collectable
+- Level
+flg-5C000100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Main Storyline
+- Difficulty Specific
+flg-5C000102:
+- Offline Mode
+- Single Player
+- Cooperative
+- Main Storyline
+- Story Completed
+- Difficulty Specific
+flg-54000500:
+- Offline Mode
+- Single Player
+- Cooperative
+- Difficulty Specific
+- Multiple Playthroughs Required
+flg-50008100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Shop
+flg-50800100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Cumulative +
+flg-50000100:
+- Offline Mode
+- Single Player
+- Cooperative
+flg-40800140:
+- Offline Mode
+- Cooperative
+- Host Only
+- Cumulative +
+flg-50840100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Cumulative +
+- Buggy
+flg-00010000:
+- Discontinued
+flg-50800140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Cumulative +
+flg-51000100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Collectable
+flg-50000110:
+- Offline Mode
+- Single Player
+- Cooperative
+- Time/Date
+flg-30008100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Shop
+flg-5100A000:
+- Offline Mode
+- Single Player
+- Collectable
+- Level
+- Shop
+flg-5000A010:
+- Offline Mode
+- Single Player
+- Level
+- Shop
+- Time/Date
+flg-50804000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Buggy +
+flg-500C0000:
+- Offline Mode
+- Single Player
+- Missable
+- Buggy
+flg-5080A000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Level
+- Shop
+flg-58040000:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Buggy
+flg-38044100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Main Storyline
+- Buggy +
+- Buggy
+flg-80040100:
+- Online Mode
+- Cooperative
+- Buggy
+flg-51080000:
+- Offline Mode
+- Single Player
+- Collectable
+- Missable
+flg-80002080:
+- Online Mode
+- Versus
+- Level
+flg-5E000002:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Story Completed
+- Difficulty Specific
+- Stackable
+flg-80800080:
+- Online Mode
+- Versus
+- Cumulative +
+flg-80802080:
+- Online Mode
+- Versus
+- Cumulative +
+- Level
+flg-51040000:
+- Offline Mode
+- Single Player
+- Collectable
+- Buggy
+flg-51000010:
+- Offline Mode
+- Single Player
+- Collectable
+- Time/Date
+flg-80040080:
+- Online Mode
+- Versus
+- Buggy
+flg-80002180:
+- Online Mode
+- Cooperative
+- Versus
+- Level
+flg-80000180:
+- Online Mode
+- Cooperative
+- Versus
+flg-80800180:
+- Online Mode
+- Cooperative
+- Versus
+- Cumulative +
+flg-80004180:
+- Online Mode
+- Cooperative
+- Versus
+- Buggy +
+flg-51004000:
+- Offline Mode
+- Single Player
+- Collectable
+- Buggy +
+flg-50044000:
+- Offline Mode
+- Single Player
+- Buggy +
+- Buggy
+flg-51044000:
+- Offline Mode
+- Single Player
+- Collectable
+- Buggy +
+- Buggy
+flg-80900088:
+- Online Mode
+- Versus
+- Cumulative +
+- 4 Players Required
+- Time Consuming
+flg-80800088:
+- Online Mode
+- Versus
+- Cumulative +
+- 4 Players Required
+flg-80102088:
+- Online Mode
+- Versus
+- Level
+- 4 Players Required
+- Time Consuming
+flg-80002088:
+- Online Mode
+- Versus
+- Level
+- 4 Players Required
+flg-80802088:
+- Online Mode
+- Versus
+- Cumulative +
+- Level
+- 4 Players Required
+flg-80840080:
+- Online Mode
+- Versus
+- Cumulative +
+- Buggy
+flg-80042080:
+- Online Mode
+- Versus
+- Level
+- Buggy
+flg-50900000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Time Consuming
+flg-50100000:
+- Offline Mode
+- Single Player
+- Time Consuming
+flg-58000100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Main Storyline
+flg-58000102:
+- Offline Mode
+- Single Player
+- Cooperative
+- Main Storyline
+- Story Completed
+flg-510C0000:
+- Offline Mode
+- Single Player
+- Collectable
+- Missable
+- Buggy
+flg-50080000:
+- Offline Mode
+- Single Player
+- Missable
+flg-50040010:
+- Offline Mode
+- Single Player
+- Time/Date
+- Buggy
+flg-51808000:
+- Offline Mode
+- Single Player
+- Collectable
+- Cumulative +
+- Shop
+flg-80400080:
+- Online Mode
+- Versus
+- Viral
+flg-51800000:
+- Offline Mode
+- Single Player
+- Collectable
+- Cumulative +
+flg-50808000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Shop
+flg-34800080:
+- Online/Offline
+- Single Player
+- Versus
+- Difficulty Specific
+- Cumulative +
+flg-30000120:
+- Online/Offline
+- Single Player
+- Cooperative
+- External Content
+flg-80000120:
+- Online Mode
+- Cooperative
+- External Content
+flg-81000120:
+- Online Mode
+- Cooperative
+- Collectable
+- External Content
+flg-90000300:
+- Online Mode
+- Single Player
+- Cooperative
+- Cumulative
+flg-94800100:
+- Online Mode
+- Single Player
+- Cooperative
+- Difficulty Specific
+- Cumulative +
+flg-90940100:
+- Online Mode
+- Single Player
+- Cooperative
+- Cumulative +
+- Time Consuming
+- Buggy
+flg-50840000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Buggy
+flg-9A000002:
+- Online Mode
+- Single Player
+- Main Storyline
+- Story Completed
+- Stackable
+flg-96000000:
+- Online Mode
+- Single Player
+- Difficulty Specific
+- Stackable
+flg-90008000:
+- Online Mode
+- Single Player
+- Shop
+flg-90800000:
+- Online Mode
+- Single Player
+- Cumulative +
+flg-90002000:
+- Online Mode
+- Single Player
+- Level
+flg-50008200:
+- Offline Mode
+- Single Player
+- Cumulative
+- Shop
+flg-50048200:
+- Offline Mode
+- Single Player
+- Cumulative
+- Shop
+- Buggy
+flg-5080C000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Shop
+- Buggy +
+flg-50048000:
+- Offline Mode
+- Single Player
+- Shop
+- Buggy
+flg-50000200:
+- Offline Mode
+- Single Player
+- Cumulative
+flg-50880000:
+- Offline Mode
+- Single Player
+- Missable
+- Cumulative +
+flg-50080002:
+- Offline Mode
+- Single Player
+- Story Completed
+- Missable
+flg-5000E000:
+- Offline Mode
+- Single Player
+- Level
+- Shop
+- Buggy +
+flg-50800010:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Time/Date
+flg-5004A000:
+- Offline Mode
+- Single Player
+- Level
+- Shop
+- Buggy
+flg-50844000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Buggy +
+- Buggy
+flg-30002100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Level
+flg-30040100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Buggy
+flg-30802100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Cumulative +
+- Level
+flg-34080100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Difficulty Specific
+- Missable
+flg-31040100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Collectable
+- Buggy
+flg-30004100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Buggy +
+flg-32000100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Stackable
+flg-30840100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Cumulative +
+- Buggy
+flg-31000110:
+- Online/Offline
+- Single Player
+- Cooperative
+- Collectable
+- Time/Date
+flg-5A040002:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Story Completed
+- Stackable
+- Buggy
+flg-5E040000:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Difficulty Specific
+- Stackable
+- Buggy
+flg-8004A888:
+- Online Mode
+- Versus
+- Level
+- Shop
+- 6 Players Required
+- Buggy
+- Partly Discontinued/Unobtainable
+flg-80840088:
+- Online Mode
+- Versus
+- Cumulative +
+- 6 Players Required
+- Buggy
+flg-80044098:
+- Online Mode
+- Versus
+- 6 Players Required
+- Time/Date
+- Buggy +
+- Buggy
+flg-8000A088:
+- Online Mode
+- Versus
+- Level
+- Shop
+- 6 Players Required
+flg-90002088:
+- Online Mode
+- Single Player
+- Versus
+- Level
+- 6 Players Required
+flg-58800000:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Cumulative +
+flg-90800080:
+- Online Mode
+- Single Player
+- Versus
+- Cumulative +
+flg-80040088:
+- Online Mode
+- Versus
+- 5 Players Required
+- Buggy
+flg-8000A080:
+- Online Mode
+- Versus
+- Level
+- Shop
+flg-9000A000:
+- Online Mode
+- Single Player
+- Level
+- Shop
+flg-8010A080:
+- Online Mode
+- Versus
+- Level
+- Shop
+- Time Consuming
+flg-8080A088:
+- Online Mode
+- Versus
+- Cumulative +
+- Level
+- Shop
+- 5 Players Required
+flg-9084A010:
+- Online Mode
+- Single Player
+- Cumulative +
+- Level
+- Shop
+- Time/Date
+- Buggy
+flg-8004A088:
+- Online Mode
+- Versus
+- Level
+- Shop
+- 5 Players Required
+- Buggy
+flg-80800098:
+- Online Mode
+- Versus
+- Cumulative +
+- 5 Players Required
+- Time/Date
+flg-81000080:
+- Online Mode
+- Versus
+- Collectable
+flg-300000A0:
+- Online/Offline
+- Single Player
+- Versus
+- External Content
+flg-30804080:
+- Online/Offline
+- Single Player
+- Versus
+- Cumulative +
+- Buggy +
+flg-58000800:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Partly Discontinued/Unobtainable
+flg-38004100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Main Storyline
+- Buggy +
+flg-38040100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Main Storyline
+- Buggy
+flg-30000300:
+- Online/Offline
+- Single Player
+- Cooperative
+- Cumulative
+flg-30000190:
+- Online/Offline
+- Single Player
+- Cooperative
+- Versus
+- Time/Date
+flg-36000100:
+- Online/Offline
+- Single Player
+- Cooperative
+- Difficulty Specific
+- Stackable
+flg-80004088:
+- Online Mode
+- Versus
+- 4 Players Required
+- Buggy +
+flg-91040100:
+- Online Mode
+- Single Player
+- Cooperative
+- Collectable
+- Buggy
+flg-98000102:
+- Online Mode
+- Single Player
+- Cooperative
+- Main Storyline
+- Story Completed
+flg-50802000:
+- Offline Mode
+- Single Player
+- Cumulative +
+- Level
+flg-59000000:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Collectable
+flg-51000020:
+- Offline Mode
+- Single Player
+- Collectable
+- External Content
+flg-54000400:
+- Offline Mode
+- Single Player
+- Difficulty Specific
+- Multiple Playthroughs Required
+flg-50000020:
+- Offline Mode
+- Single Player
+- External Content
+flg-80808088:
+- Online Mode
+- Versus
+- Cumulative +
+- Shop
+- 4 Players Required
+flg-40000108:
+- Offline Mode
+- Cooperative
+- 3 Players Required
+flg-40000100:
+- Offline Mode
+- Cooperative
+flg-54000100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Difficulty Specific
+flg-50000300:
+- Offline Mode
+- Single Player
+- Cooperative
+- Cumulative
+flg-50008300:
+- Offline Mode
+- Single Player
+- Cooperative
+- Cumulative
+- Shop
+flg-50002100:
+- Offline Mode
+- Single Player
+- Cooperative
+- Level
+flg-50000500:
+- Offline Mode
+- Single Player
+- Cooperative
+- Multiple Playthroughs Required
+flg-30000010:
+- Online/Offline
+- Single Player
+- Time/Date
+flg-31000010:
+- Online/Offline
+- Single Player
+- Collectable
+- Time/Date
+flg-71100010:
+- Offline Mode
+- Online/Offline
+- Single Player
+- Collectable
+- Time/Date
+- Time Consuming
+flg-80800108:
+- Online Mode
+- Cooperative
+- Cumulative +
+- 5 Players Required
+flg-40000080:
+- Offline Mode
+- Versus
+flg-38000080:
+- Online/Offline
+- Single Player
+- Versus
+- Main Storyline
+flg-30808080:
+- Online/Offline
+- Single Player
+- Versus
+- Cumulative +
+- Shop
+flg-58000140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Main Storyline
+flg-50000140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+flg-51000140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Collectable
+flg-51002140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Collectable
+- Level
+flg-50002140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Level
+flg-50042140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Level
+- Buggy
+flg-50080140:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Missable
+flg-58000142:
+- Offline Mode
+- Single Player
+- Cooperative
+- Host Only
+- Main Storyline
+- Story Completed
+flg-30840080:
+- Online/Offline
+- Single Player
+- Versus
+- Cumulative +
+- Buggy
+flg-50042000:
+- Offline Mode
+- Single Player
+- Level
+- Buggy
+flg-00020000:
+- Unobtainable
+flg-52080000:
+- Offline Mode
+- Single Player
+- Stackable
+- Missable
+flg-5A000000:
+- Offline Mode
+- Single Player
+- Main Storyline
+- Stackable
+flg-50000080:
+- Offline Mode
+- Single Player
+- Versus
