fixed metal suits

--- a/game_data/Brawlhalla.yaml
+++ b/game_data/Brawlhalla.yaml
@@ -8,7 +8,7 @@ Base Game Achievements:
   Description: Earn a total of 25,000 Gold.
   GS: '15'
   Guide: true
-  Number of Gamers: 22751
+  Number of Gamers: 22762
   Percentage of Gamers: 12%
   Ratio: 2.85
   TA: '42'
@@ -20,7 +20,7 @@ Base Game Achievements:
   Description: Earn a total of 50,000 Gold.
   GS: '30'
   Guide: false
-  Number of Gamers: 12790
+  Number of Gamers: 12793
   Percentage of Gamers: 7%
   Ratio: 3.8
   TA: '114'
@@ -32,7 +32,7 @@ Base Game Achievements:
   Description: Earn a total of 100,000 Gold.
   GS: '80'
   Guide: true
-  Number of Gamers: 6917
+  Number of Gamers: 6923
   Percentage of Gamers: 4%
   Ratio: 5.17
   TA: '413'
@@ -44,7 +44,7 @@ Base Game Achievements:
   Description: Reach account level 10.
   GS: '15'
   Guide: true
-  Number of Gamers: 75260
+  Number of Gamers: 75290
   Percentage of Gamers: 41%
   Ratio: 1.56
   TA: '23'
@@ -56,7 +56,7 @@ Base Game Achievements:
   Description: Reach account level 20.
   GS: '15'
   Guide: true
-  Number of Gamers: 30961
+  Number of Gamers: 30976
   Percentage of Gamers: 17%
   Ratio: 2.44
   TA: '36'
@@ -68,7 +68,7 @@ Base Game Achievements:
   Description: Reach account level 30.
   GS: '30'
   Guide: false
-  Number of Gamers: 15422
+  Number of Gamers: 15428
   Percentage of Gamers: 8%
   Ratio: 3.46
   TA: '103'
@@ -80,7 +80,7 @@ Base Game Achievements:
   Description: Reach account level 40.
   GS: '80'
   Guide: false
-  Number of Gamers: 8940
+  Number of Gamers: 8941
   Percentage of Gamers: 5%
   Ratio: 4.54
   TA: '363'
@@ -92,7 +92,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Grapple Hammer Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 13555
+  Number of Gamers: 13564
   Percentage of Gamers: 7%
   Ratio: 3.69
   TA: '55'
@@ -104,7 +104,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Sword Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 17816
+  Number of Gamers: 17821
   Percentage of Gamers: 10%
   Ratio: 3.22
   TA: '48'
@@ -116,7 +116,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Blasters Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 14232
+  Number of Gamers: 14236
   Percentage of Gamers: 8%
   Ratio: 3.6
   TA: '54'
@@ -128,7 +128,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Rocket Lance Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 19918
+  Number of Gamers: 19925
   Percentage of Gamers: 11%
   Ratio: 3.04
   TA: '45'
@@ -140,7 +140,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Spear Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 26933
+  Number of Gamers: 26941
   Percentage of Gamers: 15%
   Ratio: 2.62
   TA: '39'
@@ -152,7 +152,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Katars Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 14826
+  Number of Gamers: 14831
   Percentage of Gamers: 8%
   Ratio: 3.53
   TA: '52'
@@ -164,7 +164,7 @@ Base Game Achievements:
   Description: Reach level 10 with an Axe Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 13475
+  Number of Gamers: 13480
   Percentage of Gamers: 7%
   Ratio: 3.7
   TA: '55'
@@ -176,7 +176,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Bow Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 15743
+  Number of Gamers: 15744
   Percentage of Gamers: 9%
   Ratio: 3.42
   TA: '51'
@@ -188,7 +188,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Gauntlets Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 19980
+  Number of Gamers: 19983
   Percentage of Gamers: 11%
   Ratio: 3.04
   TA: '45'
@@ -200,7 +200,7 @@ Base Game Achievements:
   Description: Reach level 10 with a Scythe Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 16089
+  Number of Gamers: 16095
   Percentage of Gamers: 9%
   Ratio: 3.39
   TA: '50'
@@ -212,7 +212,7 @@ Base Game Achievements:
   Description: Play 3 games in the Free-for-All matchmaking queue.
   GS: '15'
   Guide: true
-  Number of Gamers: 91995
+  Number of Gamers: 92025
   Percentage of Gamers: 50%
   Ratio: 1.41
   TA: '21'
@@ -224,7 +224,7 @@ Base Game Achievements:
   Description: Play 30 matchmaking games.
   GS: '30'
   Guide: true
-  Number of Gamers: 47340
+  Number of Gamers: 47362
   Percentage of Gamers: 26%
   Ratio: 1.97
   TA: '59'
@@ -236,7 +236,7 @@ Base Game Achievements:
   Description: Play 3 games in the Ranked 1v1 matchmaking queue.
   GS: '15'
   Guide: true
-  Number of Gamers: 45915
+  Number of Gamers: 45931
   Percentage of Gamers: 25%
   Ratio: 2.0
   TA: '30'
@@ -248,7 +248,7 @@ Base Game Achievements:
   Description: Play a matchmaking game.
   GS: '15'
   Guide: true
-  Number of Gamers: 181487
+  Number of Gamers: 181548
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '15'
@@ -259,8 +259,8 @@ Base Game Achievements:
   Description: Play 3 games in the Friendly 2v2 matchmaking queue.
   GS: '15'
   Guide: true
-  Number of Gamers: 78635
-  Percentage of Gamers: 42%
+  Number of Gamers: 78669
+  Percentage of Gamers: 43%
   Ratio: 1.53
   TA: '23'
   Tags:
@@ -270,7 +270,7 @@ Base Game Achievements:
   Description: Play 3 games in the Ranked 2v2 matchmaking queue.
   GS: '15'
   Guide: true
-  Number of Gamers: 45459
+  Number of Gamers: 45479
   Percentage of Gamers: 25%
   Ratio: 2.01
   TA: '30'
@@ -281,7 +281,7 @@ Base Game Achievements:
   Description: Play 3 games in the Brawl of the Week matchmaking queue.
   GS: '15'
   Guide: true
-  Number of Gamers: 30438
+  Number of Gamers: 30452
   Percentage of Gamers: 16%
   Ratio: 2.46
   TA: '36'
@@ -293,7 +293,7 @@ Base Game Achievements:
   Description: KO 25 opponents in matchmaking games.
   GS: '15'
   Guide: true
-  Number of Gamers: 84984
+  Number of Gamers: 85016
   Percentage of Gamers: 46%
   Ratio: 1.47
   TA: '22'
@@ -305,7 +305,7 @@ Base Game Achievements:
   Description: KO 500 opponents in matchmaking games.
   GS: '30'
   Guide: true
-  Number of Gamers: 17102
+  Number of Gamers: 17107
   Percentage of Gamers: 9%
   Ratio: 3.28
   TA: '98'
@@ -317,7 +317,7 @@ Base Game Achievements:
   Description: KO 1,000 opponents in matchmaking games.
   GS: '80'
   Guide: true
-  Number of Gamers: 10465
+  Number of Gamers: 10466
   Percentage of Gamers: 6%
   Ratio: 4.2
   TA: '336'
@@ -329,7 +329,7 @@ Base Game Achievements:
   Description: Win 10 matchmaking games.
   GS: '15'
   Guide: true
-  Number of Gamers: 62081
+  Number of Gamers: 62104
   Percentage of Gamers: 34%
   Ratio: 1.72
   TA: '25'
@@ -341,7 +341,7 @@ Base Game Achievements:
   Description: Win 100 matchmaking games.
   GS: '30'
   Guide: false
-  Number of Gamers: 17828
+  Number of Gamers: 17837
   Percentage of Gamers: 10%
   Ratio: 3.22
   TA: '96'
@@ -365,7 +365,7 @@ Base Game Achievements:
   Description: Reach level 5 with 2 Legends.
   GS: '15'
   Guide: true
-  Number of Gamers: 56590
+  Number of Gamers: 56608
   Percentage of Gamers: 31%
   Ratio: 1.8
   TA: '27'
@@ -377,7 +377,7 @@ Base Game Achievements:
   Description: Reach level 10 with 5 Legends
   GS: '30'
   Guide: true
-  Number of Gamers: 10109
+  Number of Gamers: 10113
   Percentage of Gamers: 5%
   Ratio: 4.27
   TA: '128'
@@ -389,7 +389,7 @@ Base Game Achievements:
   Description: Reach level 10 with 10 Legends.
   GS: '80'
   Guide: true
-  Number of Gamers: 5203
+  Number of Gamers: 5206
   Percentage of Gamers: 3%
   Ratio: 5.96
   TA: '477'
@@ -401,7 +401,7 @@ Base Game Achievements:
   Description: Get 10 Double KOs in matchmaking games.
   GS: '15'
   Guide: true
-  Number of Gamers: 33627
+  Number of Gamers: 33636
   Percentage of Gamers: 18%
   Ratio: 2.34
   TA: '35'
@@ -413,7 +413,7 @@ Base Game Achievements:
   Description: KO an opponent with a thrown item 30 times in matchmaking games.
   GS: '15'
   Guide: true
-  Number of Gamers: 13355
+  Number of Gamers: 13356
   Percentage of Gamers: 7%
   Ratio: 3.72
   TA: '55'
@@ -425,7 +425,7 @@ Base Game Achievements:
   Description: Win a Ranked 1v1 game without losing any lives 3 times.
   GS: '15'
   Guide: true
-  Number of Gamers: 17759
+  Number of Gamers: 17767
   Percentage of Gamers: 10%
   Ratio: 3.22
   TA: '48'
@@ -438,7 +438,7 @@ Base Game Achievements:
     games.
   GS: '15'
   Guide: true
-  Number of Gamers: 11827
+  Number of Gamers: 11831
   Percentage of Gamers: 6%
   Ratio: 3.95
   TA: '59'
@@ -450,7 +450,7 @@ Base Game Achievements:
   Description: 'Press the "Say: GG!" button after 66 different matchmaking games.'
   GS: '15'
   Guide: true
-  Number of Gamers: 20475
+  Number of Gamers: 20477
   Percentage of Gamers: 11%
   Ratio: 3.0
   TA: '45'
@@ -463,7 +463,7 @@ Base Game Achievements:
     Breaker wins do not count).
   GS: '15'
   Guide: true
-  Number of Gamers: 8929
+  Number of Gamers: 8931
   Percentage of Gamers: 5%
   Ratio: 4.55
   TA: '68'
@@ -471,21 +471,21 @@ Base Game Achievements:
   - Online Mode
   - Versus
   - Cumulative +
-Base Ratio: 11.69030303030303
-Base TA: 19289
+Base Ratio: 11.301818181818183
+Base TA: 18648
 Delisted: false
 Developer: Blue Mammoth Games
 Game Name: Brawlhalla
 Genres: Fighting
 Install Size: 1240.0
-Number of Completions: 8
-Number of Gamers: 185026
+Number of Completions: 9
+Number of Gamers: 185086
 Overall Completion Time:
 - 150.0
 - 200.0
 Overall GS: 1650
-Overall Ratio: 11.69030303030303
-Overall TA: 19289
+Overall Ratio: 11.301818181818183
+Overall TA: 18648
 PDU: 0
 Percentage Completed: 0.0
 Publisher: Ubisoft
@@ -497,7 +497,7 @@ Update Achievements:
   Description: Reach level 10 with a Cannon Legend
   GS: '15'
   Guide: true
-  Number of Gamers: 7132
+  Number of Gamers: 7134
   Percentage of Gamers: 4%
   Ratio: 5.09
   TA: '76'
@@ -509,7 +509,7 @@ Update Achievements:
   Description: Reach level 10 with an Orb Legend
   GS: '15'
   Guide: true
-  Number of Gamers: 10087
+  Number of Gamers: 10095
   Percentage of Gamers: 5%
   Ratio: 4.28
   TA: '64'
@@ -521,7 +521,7 @@ Update Achievements:
   Description: Reach level 10 with a Greatsword Legend
   GS: '15'
   Guide: true
-  Number of Gamers: 6127
+  Number of Gamers: 6130
   Percentage of Gamers: 3%
   Ratio: 5.49
   TA: '82'
@@ -533,7 +533,7 @@ Update Achievements:
   Description: Reach level 25 with 3 Legends
   GS: '60'
   Guide: true
-  Number of Gamers: 2069
+  Number of Gamers: 2071
   Percentage of Gamers: 1%
   Ratio: 9.45
   TA: '567'
@@ -548,7 +548,7 @@ Update Achievements:
   Guide: true
   Number of Gamers: 1825
   Percentage of Gamers: 1%
-  Ratio: 10.06
+  Ratio: 10.07
   TA: '503'
   Tags:
   - Online Mode
@@ -560,7 +560,7 @@ Update Achievements:
     games
   GS: '20'
   Guide: true
-  Number of Gamers: 5936
+  Number of Gamers: 5941
   Percentage of Gamers: 3%
   Ratio: 5.58
   TA: '111'
@@ -572,7 +572,7 @@ Update Achievements:
   Description: Hit multiple opponents with a single Bouncy Bomb in a matchmaking game
   GS: '15'
   Guide: true
-  Number of Gamers: 24551
+  Number of Gamers: 24561
   Percentage of Gamers: 13%
   Ratio: 2.74
   TA: '41'
@@ -583,7 +583,7 @@ Update Achievements:
   Description: Get 6 KOs in a single Ranked 2v2 or Friendly 2v2 game
   GS: '15'
   Guide: true
-  Number of Gamers: 16248
+  Number of Gamers: 16256
   Percentage of Gamers: 9%
   Ratio: 3.37
   TA: '50'
@@ -618,9 +618,9 @@ Update Achievements:
   Description: Reach level 10 with a Battle Boots Legend.
   GS: '15'
   Guide: true
-  Number of Gamers: 4085
+  Number of Gamers: 4088
   Percentage of Gamers: 2%
-  Ratio: 6.73
+  Ratio: 6.72
   TA: '100'
   Tags:
   - Online Mode
@@ -630,7 +630,7 @@ Update Achievements:
   Description: Hit opponents with the same Spike Ball 4 times in a matchmaking game.
   GS: '15'
   Guide: false
-  Number of Gamers: 3164
+  Number of Gamers: 3167
   Percentage of Gamers: 2%
   Ratio: 7.64
   TA: '114'
@@ -641,10 +641,10 @@ Update Achievements:
   Description: Catch 15 Bouncy Bombs in a row in Catch Bombs Training without frame-stepping.
   GS: '20'
   Guide: true
-  Number of Gamers: 531
+  Number of Gamers: 533
   Percentage of Gamers: 0%
-  Ratio: 18.66
-  TA: '373'
+  Ratio: 18.63
+  TA: '372'
   Tags:
   - Online Mode
   - Versus
@@ -653,7 +653,7 @@ Update Achievements:
     matchmaking games.
   GS: '15'
   Guide: true
-  Number of Gamers: 2458
+  Number of Gamers: 2459
   Percentage of Gamers: 1%
   Ratio: 8.67
   TA: '130'
@@ -665,7 +665,7 @@ Update Achievements:
   Description: Buy a Skyforged item from the store.
   GS: '5'
   Guide: true
-  Number of Gamers: 4948
+  Number of Gamers: 4951
   Percentage of Gamers: 3%
   Ratio: 6.11
   TA: '30'
@@ -689,9 +689,9 @@ Update Achievements:
   Description: Reach level 40 with a Legend.
   GS: '40'
   Guide: false
-  Number of Gamers: 1839
+  Number of Gamers: 1840
   Percentage of Gamers: 1%
-  Ratio: 10.03
+  Ratio: 10.02
   TA: '401'
   Tags:
   - Online Mode
@@ -702,7 +702,7 @@ Update Achievements:
   Description: Reach account level 50.
   GS: '80'
   Guide: false
-  Number of Gamers: 5187
+  Number of Gamers: 5189
   Percentage of Gamers: 3%
   Ratio: 5.97
   TA: '477'
@@ -714,10 +714,10 @@ Update Achievements:
   Description: Reach level 10 with a Chakram Legend.
   GS: '15'
   Guide: false
-  Number of Gamers: 91
+  Number of Gamers: 98
   Percentage of Gamers: 0%
-  Ratio: 45.09
-  TA: '676'
+  Ratio: 43.45
+  TA: '651'
   Tags:
   - Online Mode
   - Versus
@@ -727,10 +727,10 @@ Update Achievements:
     the rematch.
   GS: '5'
   Guide: true
-  Number of Gamers: 204
+  Number of Gamers: 230
   Percentage of Gamers: 0%
-  Ratio: 30.11
-  TA: '150'
+  Ratio: 28.36
+  TA: '141'
   Tags:
   - Online Mode
   - Versus
@@ -738,10 +738,10 @@ Update Achievements:
   Description: Win 10 best-of-3 series in matchmaking.
   GS: '20'
   Guide: false
-  Number of Gamers: 94
+  Number of Gamers: 114
   Percentage of Gamers: 0%
-  Ratio: 44.36
-  TA: '887'
+  Ratio: 40.29
+  TA: '805'
   Tags:
   - Online Mode
   - Versus
@@ -749,11 +749,11 @@ Update Achievements:
 - Achievement Name: Lighter than Air
   Description: KO 50 opponents with Gravity-Canceled Light Attacks.
   GS: '40'
-  Guide: true
-  Number of Gamers: 13
+  Guide: false
+  Number of Gamers: 15
   Percentage of Gamers: 0%
-  Ratio: 119.3
-  TA: 4,772
+  Ratio: 111.08
+  TA: 4,443
   Tags:
   - Online Mode
   - Versus
@@ -762,10 +762,10 @@ Update Achievements:
   Description: KO 10 opponents in Ranked 1v1 matches using only Light Attacks.
   GS: '10'
   Guide: true
-  Number of Gamers: 83
+  Number of Gamers: 95
   Percentage of Gamers: 0%
-  Ratio: 47.21
-  TA: '472'
+  Ratio: 44.13
+  TA: '441'
   Tags:
   - Online Mode
   - Versus
@@ -774,10 +774,10 @@ Update Achievements:
   Description: Get 5 Triple KOs.
   GS: '15'
   Guide: false
-  Number of Gamers: 29
+  Number of Gamers: 32
   Percentage of Gamers: 0%
-  Ratio: 79.87
-  TA: 1,198
+  Ratio: 76.05
+  TA: 1,140
   Tags:
   - Online Mode
   - Versus
@@ -786,10 +786,10 @@ Update Achievements:
   Description: Hit 3 opponents with a single Signature Attack 10 times.
   GS: '15'
   Guide: false
-  Number of Gamers: 30
+  Number of Gamers: 33
   Percentage of Gamers: 0%
-  Ratio: 78.53
-  TA: 1,178
+  Ratio: 74.89
+  TA: 1,123
   Tags:
   - Online Mode
   - Versus
@@ -798,10 +798,10 @@ Update Achievements:
   Description: Reach level 25 with Legends using 8 different Weapons.
   GS: '80'
   Guide: false
-  Number of Gamers: 236
+  Number of Gamers: 247
   Percentage of Gamers: 0%
-  Ratio: 28.0
-  TA: 2,240
+  Ratio: 27.37
+  TA: 2,189
   Tags:
   - Online Mode
   - Versus
