--- a/game_data/Duck-Run.yaml
+++ b/game_data/Duck-Run.yaml
@@ -8,7 +8,7 @@ Base Game Achievements:
   Description: Die 1 time
   GS: '15'
   Guide: false
-  Number of Gamers: 808
+  Number of Gamers: 815
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '15'
@@ -19,7 +19,7 @@ Base Game Achievements:
   Description: Pass 1 level
   GS: '15'
   Guide: false
-  Number of Gamers: 807
+  Number of Gamers: 814
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '15'
@@ -31,7 +31,7 @@ Base Game Achievements:
   Description: Pass 3 level
   GS: '20'
   Guide: false
-  Number of Gamers: 801
+  Number of Gamers: 808
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '20'
@@ -43,9 +43,9 @@ Base Game Achievements:
   Description: Pass 5 level
   GS: '30'
   Guide: false
-  Number of Gamers: 778
+  Number of Gamers: 784
   Percentage of Gamers: 96%
-  Ratio: 1.01
+  Ratio: 1.02
   TA: '30'
   Tags:
   - Offline Mode
@@ -55,7 +55,7 @@ Base Game Achievements:
   Description: Pass level 10
   GS: '50'
   Guide: false
-  Number of Gamers: 638
+  Number of Gamers: 645
   Percentage of Gamers: 79%
   Ratio: 1.12
   TA: '56'
@@ -67,7 +67,7 @@ Base Game Achievements:
   Description: Pass level 15
   GS: '30'
   Guide: false
-  Number of Gamers: 461
+  Number of Gamers: 466
   Percentage of Gamers: 57%
   Ratio: 1.32
   TA: '39'
@@ -79,7 +79,7 @@ Base Game Achievements:
   Description: Pass 20 level
   GS: '30'
   Guide: false
-  Number of Gamers: 459
+  Number of Gamers: 464
   Percentage of Gamers: 57%
   Ratio: 1.32
   TA: '39'
@@ -91,7 +91,7 @@ Base Game Achievements:
   Description: Pass 25 level
   GS: '30'
   Guide: false
-  Number of Gamers: 424
+  Number of Gamers: 428
   Percentage of Gamers: 52%
   Ratio: 1.38
   TA: '41'
@@ -103,7 +103,7 @@ Base Game Achievements:
   Description: Pass 30 level
   GS: '90'
   Guide: false
-  Number of Gamers: 424
+  Number of Gamers: 428
   Percentage of Gamers: 52%
   Ratio: 1.38
   TA: '124'
@@ -115,7 +115,7 @@ Base Game Achievements:
   Description: Die 5 times
   GS: '50'
   Guide: false
-  Number of Gamers: 803
+  Number of Gamers: 810
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '50'
@@ -127,7 +127,7 @@ Base Game Achievements:
   Description: Die 10 times
   GS: '100'
   Guide: false
-  Number of Gamers: 802
+  Number of Gamers: 809
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -139,7 +139,7 @@ Base Game Achievements:
   Description: Finish a level within 30 seconds
   GS: '30'
   Guide: false
-  Number of Gamers: 806
+  Number of Gamers: 813
   Percentage of Gamers: 100%
   Ratio: 1.0
   TA: '30'
@@ -151,7 +151,7 @@ Base Game Achievements:
   Description: Dash for the first time
   GS: '50'
   Guide: false
-  Number of Gamers: 801
+  Number of Gamers: 808
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '50'
@@ -162,7 +162,7 @@ Base Game Achievements:
   Description: Bouce the bubble
   GS: '50'
   Guide: false
-  Number of Gamers: 776
+  Number of Gamers: 783
   Percentage of Gamers: 96%
   Ratio: 1.02
   TA: '51'
@@ -173,7 +173,7 @@ Base Game Achievements:
   Description: Die 20 times
   GS: '90'
   Guide: false
-  Number of Gamers: 800
+  Number of Gamers: 807
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '90'
@@ -185,7 +185,7 @@ Base Game Achievements:
   Description: Refil your dash
   GS: '90'
   Guide: false
-  Number of Gamers: 469
+  Number of Gamers: 474
   Percentage of Gamers: 58%
   Ratio: 1.31
   TA: '118'
@@ -196,7 +196,7 @@ Base Game Achievements:
   Description: Get in the ice stage
   GS: '50'
   Guide: false
-  Number of Gamers: 469
+  Number of Gamers: 474
   Percentage of Gamers: 58%
   Ratio: 1.31
   TA: '65'
@@ -207,7 +207,7 @@ Base Game Achievements:
   Description: Jump 20 times
   GS: '100'
   Guide: false
-  Number of Gamers: 801
+  Number of Gamers: 808
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '100'
@@ -219,7 +219,7 @@ Base Game Achievements:
   Description: Jump 30 times
   GS: '80'
   Guide: false
-  Number of Gamers: 801
+  Number of Gamers: 808
   Percentage of Gamers: 99%
   Ratio: 1.0
   TA: '80'
@@ -227,23 +227,23 @@ Base Game Achievements:
   - Offline Mode
   - Single Player
   - Cumulative +
-Base Ratio: 1.234
-Base TA: 3702
+Base Ratio: 1.2203333333333333
+Base TA: 3661
 Delisted: false
 Developer: DuDeeki Studio
 Game Name: Duck Run
 Genres: Platformer
 Install Size: 385.0
-Number of Completions: 306
-Number of Gamers: 809
+Number of Completions: 325
+Number of Gamers: 816
 Overall Completion Time:
 - 0.0
 - 1.5
 Overall GS: 3000
-Overall Ratio: 1.234
-Overall TA: 3702
+Overall Ratio: 1.2203333333333333
+Overall TA: 3661
 PDU: 0
-Percentage Completed: 37.82
+Percentage Completed: 39.83
 Publisher: AFIL Games
 Release Date: 06 November 2024
 Server Closure: false
@@ -253,7 +253,7 @@ Update Achievements:
   Description: die 50 times
   GS: '200'
   Guide: false
-  Number of Gamers: 788
+  Number of Gamers: 795
   Percentage of Gamers: 97%
   Ratio: 1.01
   TA: '202'
@@ -265,7 +265,7 @@ Update Achievements:
   Description: Jump 80 times
   GS: '200'
   Guide: false
-  Number of Gamers: 794
+  Number of Gamers: 801
   Percentage of Gamers: 98%
   Ratio: 1.0
   TA: '201'
@@ -277,7 +277,7 @@ Update Achievements:
   Description: Refil your dash 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 469
+  Number of Gamers: 474
   Percentage of Gamers: 58%
   Ratio: 1.31
   TA: '262'
@@ -289,7 +289,7 @@ Update Achievements:
   Description: bounce the buble 15 times
   GS: '200'
   Guide: false
-  Number of Gamers: 772
+  Number of Gamers: 779
   Percentage of Gamers: 95%
   Ratio: 1.02
   TA: '204'
@@ -301,7 +301,7 @@ Update Achievements:
   Description: pass level 31
   GS: '200'
   Guide: false
-  Number of Gamers: 423
+  Number of Gamers: 427
   Percentage of Gamers: 52%
   Ratio: 1.38
   TA: '276'
@@ -313,10 +313,10 @@ Update Achievements:
   Description: die 75 times
   GS: '200'
   Guide: false
-  Number of Gamers: 450
-  Percentage of Gamers: 56%
-  Ratio: 1.34
-  TA: '268'
+  Number of Gamers: 483
+  Percentage of Gamers: 59%
+  Ratio: 1.29
+  TA: '259'
   Tags:
   - Offline Mode
   - Single Player
@@ -325,10 +325,10 @@ Update Achievements:
   Description: Jump 100 times
   GS: '200'
   Guide: false
-  Number of Gamers: 430
-  Percentage of Gamers: 53%
-  Ratio: 1.37
-  TA: '274'
+  Number of Gamers: 459
+  Percentage of Gamers: 56%
+  Ratio: 1.33
+  TA: '266'
   Tags:
   - Offline Mode
   - Single Player
@@ -337,10 +337,10 @@ Update Achievements:
   Description: Refil your dash 25 times
   GS: '200'
   Guide: true
-  Number of Gamers: 338
-  Percentage of Gamers: 42%
-  Ratio: 1.54
-  TA: '309'
+  Number of Gamers: 358
+  Percentage of Gamers: 44%
+  Ratio: 1.5
+  TA: '301'
   Tags:
   - Offline Mode
   - Single Player
@@ -349,10 +349,10 @@ Update Achievements:
   Description: bounce the buble 20 times
   GS: '200'
   Guide: false
-  Number of Gamers: 437
-  Percentage of Gamers: 54%
-  Ratio: 1.36
-  TA: '272'
+  Number of Gamers: 469
+  Percentage of Gamers: 57%
+  Ratio: 1.31
+  TA: '263'
   Tags:
   - Offline Mode
   - Single Player
@@ -361,10 +361,10 @@ Update Achievements:
   Description: pass level 32
   GS: '200'
   Guide: true
-  Number of Gamers: 313
-  Percentage of Gamers: 39%
-  Ratio: 1.6
-  TA: '321'
+  Number of Gamers: 331
+  Percentage of Gamers: 41%
+  Ratio: 1.57
+  TA: '314'
   Tags:
   - Offline Mode
   - Single Player
